# Git

./: .gitignore
worldcup-betting-edp/: .env.example  .gitignore  AGENTS.md  BACKTEST_SPEC.md  DATA_SOURCES.md  DECISIONS.md  MODEL_SPEC.md  PROJECT_STATUS.md  README.md  ROADMAP.md  TASKS.md  pyproject.toml
worldcup-betting-edp/apps/: streamlit_app.py
worldcup-betting-edp/examples/: demo_backtest_manifest.json  demo_settled_match.json  demo_single_match.json  demo_the_odds_api_historical_snapshot.json  demo_world_cup_market_odds.csv  demo_world_cup_market_odds_timeseries.csv  demo_world_cup_match_timing.csv  single_match_demo.py
worldcup-betting-edp/reports/: api_football_source_probe_plan.md  demo_backtest_result.json  demo_market_comparison.json  demo_market_movement_features.csv  initial_research_report.md  odds_source_validation.md  real_market_backtest_2022_snapshot.json  real_market_backtest_2022_snapshot.md  the_odds_api_access_check.md  the_odds_api_paid_snapshot_check.md  world_cup_elo_1x2_evaluation.json  world_cup_elo_1x2_evaluation_calibrated.json  world_cup_elo_draw_calibration.json
worldcup-betting-edp/scripts/: build_the_odds_api_event_mapping.py  fetch_the_odds_api_snapshot.py  probe_api_football_source.py  run_real_market_backtest.py
worldcup-betting-edp/tests/: test_api_football.py  test_api_football_client.py  test_backtest_manifest.py  test_bankroll_curve.py  test_batch_runner.py  test_betting_kelly.py  test_canonical_matches.py  test_cli.py  test_context_model.py  test_domain_schema.py  test_elo_calibration.py  test_elo_model.py  (+19 more)
(+52 files in other folders)
