[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-betting-edp"
version = "0.1.0"
description = "World Cup betting probability research system with market baselines, value betting, and backtesting."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "World Cup Betting EDP Research"}
]
dependencies = []

[project.scripts]
worldcup-edp-predict = "worldcup_betting_edp.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
ui = [
  "streamlit>=1.36",
  "pandas>=2.0",
  "altair>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
